--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/">
     <title>Lacteos J.A</title>
 </head>
+<header>
+    <img src="img/descarga.jpg" alt="header">
+</header>
+<nav>
+    <ul>
+        <li>Inicio</li>
+        <li>Nosotros</li>
+        <li>Productos</li>
+        <li>Contacto</li>
+      </ul>
+</nav>
 <body>
-    <div class="contenedor">
-        <h1 id="title">Titulo</h1>
-        <p id="body">Parrafo</p>
-        <h3 id="userId">Usuario</h3>
-    </div>
-    <script src="app.js"></script>
+    <img src="img/1.jpg" alt="">
 </body>
+
+<footer>
+
+</footer>
 </html>
